--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body{
 	width: 100%;
 	height: 100%;
 	font-size: 62.5%;
+	overflow: scroll;
 	background-color: var(--dGray);
 }
 
@@ -19,7 +20,8 @@ body{
 	height: 100%;
 	width: 100%;
 	font-size: 1.4rem;
-	flex-flow: column wrap;
+	flex-flow: column;
+	overflow: scroll;
 }
 
 header{
@@ -31,21 +33,29 @@ header #title{
 	font-size: 2.5rem;
 }
 
-#root .container{
-	flex: 1 0 auto;
+#root > .container{
+	flex: 1 1 auto;
 	width: 100%;
+	height: 70%;
 }
 
-footer .container{
+.block-container{
+	width: 100%;
+	height: 100%;
+}
+
+footer > .container{
+	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	grid-column-gap: 9%;
-	place-items: center;
+	grid-auto-rows: 1fr;
+	grid-column-gap: 10%;
 }
 
-footer .container .button{
-	width: 100%;
+footer > .container .button{
 	height: auto;
+	width: 100%;
+	place-self: center;
 	stroke: var(--primary);
 }
 
