--- a/src/styles.css
+++ b/src/styles.css
@@ -36,12 +36,13 @@ header #title{
 #root > .container{
 	flex: 1 1 auto;
 	width: 100%;
-	height: 70%;
+	height: 50%;
 }
 
 .block-container{
-	width: 100%;
 	height: 100%;
+	width: auto;
+	background-color: #222;
 }
 
 footer > .container{
@@ -80,4 +81,10 @@ footer{
 	width: 100%;
 	box-sizing: border-box;
 	background-color: var(--black);
+}
+
+@media (max-height: 199vw) {
+	.block-container{
+		/*background-color: #444;*/
+	}
 }
