--- a/src/pages/game/modal/styles.css
+++ b/src/pages/game/modal/styles.css
@@ -1,25 +1,37 @@
 #modal{
+	position: absolute;
+	width: 100vw;
+	height: 100%;
+	place-content: center;
+	place-items: center;
+	background-color: rgba(26,24,26,.7);
+}
+
+#modal > .container{
 	width: 90%;
 	height: 70%;
 	border-radius: 7px;
-	top: 15%;
-	left: 5%;
 	z-index: 8001;
-	position: absolute;
-	flex-direction: column;
 	overflow: hidden;
-	box-shadow: 0 0 5px rgba(200,200,200,.2);
-	background-color: #FFF;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0 0 2rem rgba(49,45,49,.8);
+	color: #fff;
+	background-color: var(--smokyBlack);
 }
 
-#modal header{
+#modal > .container header{
 	width: 100%;
 	box-sizing: border-box;
+	z-index: 90;
+	background-color: var(--frenchViolet);
+	box-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
-#modal header #title{
+#modal > .container header #title{
 	flex: 1 0 auto;
 	text-align: center;
+	font-size: 2rem;
 }
 
 #close{
@@ -29,7 +41,7 @@
 	align-self: center;
 }
 
-#modal > .content{
+#modal > .container > .content{
 	flex: 1 0 auto;
 	margin: 0;
 	padding: 1px;
@@ -37,50 +49,49 @@
 	overflow-y: scroll;
 }
 
-#modal > .content li{
+#modal > .container > .content li{
 	list-style: none;
 	padding: 2%;
 }
 
-#modal li:nth-child(odd){
-	color: #fff;
+#modal > .container li:nth-child(odd){
+	color: var(--malachite);
 	font-weight: bold;
-	background-color: var(--dogwoodRose);
 }
 
-#modal li:nth-child(even){
-	color: var(--smokyBlack);
+#modal > .container li:nth-child(even){
 }
 
-#modal footer{
+#modal > .container footer{
 	box-sizing: border-box;
+	box-shadow: 0 -1px 3px rgba(0,0,0,.5);
 }
 
-#modal button{
+#modal > .container button{
 	width: 49%;
 	border: none;
-	margin: 1%;
 	padding: 2%;
 	box-sizing: border-box;
-	border-radius: 4px;
 	outline: none;
 	font-weight: bold;
+	transition: all .2s;
+	margin: 1%;
+	border-radius: 5px;
 	color: #fff;
-	transition: all .3s;
-	background-color: var(--dogwoodRose);
+	background-color: var(--frenchViolet);
 }
 
-#modal button:hover{
-	color: var(--dogwoodRose);
-	background-color: #FFF;
+#modal > .container button:hover{
+	background-color: #fff;
+	color: var(--frenchViolet);
 }
 
-#modal button > svg{
+#modal > .container button > svg{
 	width: 5vw;
 	height: 5vw;
 	vertical-align: bottom;
 }
 
-#modal .container{
+#modal > .container .container{
 	display: flex;
 }
