--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -8,20 +8,21 @@
 	width: 80%;
 	border-radius: 4px;
 	border: none;
-	color: #fff;
 	padding: 2% 0;
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	margin: 3% auto;
 	outline: none;
 	font-weight: bold;
 	box-shadow: 0 0 4px rgba(0,0,0,.4);
-	background-color: var(--frenchViolet);
+	transition: all .3s;
+	color: var(--lavenderWeb);
+	background: var(--dogwoodRose) linear-gradient(90deg, rgba(0,0,0,.3), transparent, rgba(0,0,0,.3));
 }
 
 #home-content .button.large:hover{
-	background-color: #fff;
-	color: var(--frenchViolet);
+	background: transparent none;
 }
+
 
 .adsbygoogle{
 	align-self: flex-end;
