--- a/src/pages/game/styles.css
+++ b/src/pages/game/styles.css
@@ -2,9 +2,7 @@
 	width: 9vw;
 	height: 9vw;
 	stroke-width: 0;
-	fill: #fff;
-	justify-self: end;
-	grid-column: 2 / span 1;
+	fill: var(--lavenderWeb);
 }
 
 .block-container{
@@ -21,21 +19,17 @@
 
 #side{
 	height: 100%;
-	color: #fff;
+	color: var(--lavenderWeb);
 	flex: 1 0 auto;
 	padding: 1%;
 	width: 10%;
 	background-color: var(--xiketic);
+	box-sizing: border-box;
 }
 
 #side h3{
 	margin: 1%;
 	color: var(--malachite);
-}
-
-/*playing time*/
-#side h3:first-of-type{
-	font-size: 1.4rem;
 }
 
 /*next*/
@@ -52,7 +46,8 @@
 	width: 40%;
 	height: auto;
 	display: block;
-	margin-top: 10%;
+	margin: 10% 0 0 1%;
+	box-sizing: border-box;
 }
 
 #root > footer{
@@ -80,11 +75,56 @@ footer > .container .button{
 }
 
 .container .button:hover{
-	animation: buttonClick .8s;
+	animation: buttonClick .7s;
 }
 
 @keyframes buttonClick{
 	from{
 		width: 90%;
+	}
+}
+
+@media only screen and (orientation: landscape) {
+	#play, #pause{
+		height: 9vh;
+		width: 9vh;
+	}
+	
+	#side > .container{
+		display: grid;
+		height: 100%;
+		grid-template-columns: repeat(2, 1fr);
+		grid-auto-rows: 1fr;
+	}
+	
+	#side > .container > *:not(#next) {
+		grid-column: 1 / span 1;
+		grid-row: span 1;
+		margin: 0;
+	}
+
+	#next.container{
+		grid-column: 2 / span 1;
+		grid-row: 1 / span 8;
+		margin: 0;
+		height: 100%;
+		width: auto;
+		justify-self: end;
+		padding: 1vh;
+		border: 1vh groove var(--lavenderWeb);
+		border-right: none;
+		border-bottom: none;
+	}
+
+	footer .container .button{
+		width: 10vh;
+		height: 10vh;
+	}
+	
+	@keyframes buttonClick{
+		from{
+			height: 9vh;
+			width: 9vh;
+		}
 	}
 }
