--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,19 +1,17 @@
-
 #home-content{
-	flex-wrap: wrap;
 	place-content: center;
+	overflow-y: scroll;
 }
 
 #home-content .button.large{
 	width: 80%;
-	border-radius: 4px;
+	border-radius: 1vw;
 	border: none;
 	padding: 2% 0;
-	font-size: 1.4rem;
 	margin: 3% auto;
 	outline: none;
 	font-weight: bold;
-	box-shadow: 0 0 4px rgba(0,0,0,.4);
+	box-shadow: 0 0 1.1vw rgba(0,0,0,.4);
 	transition: all .3s;
 	color: var(--lavenderWeb);
 	background: var(--dogwoodRose) linear-gradient(90deg, rgba(0,0,0,.3), transparent, rgba(0,0,0,.3));
@@ -28,4 +26,12 @@
 	align-self: flex-end;
 	width: 80%;
 	height: auto;
+}
+
+@media only screen and (orientation: landscape) {
+	#home-content .button.large{
+		padding: calc(3 * 100vh / 100) 0;
+		width: 60%;
+		margin: calc(3 * 100vh / 100) auto;
+	}
 }
