--- a/src/pages/scores/styles.css
+++ b/src/pages/scores/styles.css
@@ -1,48 +1,56 @@
 #score-content{
 	overflow-y: scroll;
-	flex: 1 0 auto;
 	padding: 3% 1%;
+	flex: 1 0 auto;
 	width: 100%;
+	height: 50%;
 	box-sizing: border-box;
-	justify-content: center;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-auto-rows: 1fr;
+	grid-gap: 2vw;
+	align-items: start;
+	position: relative;
 }
 
 .score{
-	width: 96%;
 	box-sizing: border-box;
 	color: var(--smokyBlack);
-	border-radius: 4px;
+	border-radius: 1.1vw;
 	transition: all .2s;
-	overflow: hidden;
-	margin: 2% 0;
-	align-self: flex-start;
 	background-color: #fff;
-	box-shadow: 0 1px 5px rgba(0,0,0,.9);
+	grid-column: span 1;
+	grid-row: span 1;
+	box-shadow: 0 1px 1.3vw rgba(0,0,0,.9);
 }
 
 .score > header{
+	border-radius: 1.1vw 1.1vw 0 0;
+	overflow: hidden;
 	background-color: var(--frenchViolet);
-	box-shadow: 0 0 4px rgba(0,0,0,.3);
+	box-shadow: 0 0 1.1vw rgba(0,0,0,.3);
 }
 
 .score > header > .container{
-	grid-template-columns: 10% 10% 1fr;
+	display: grid;
+	grid-template-columns: 20% 20% 1fr;
 }
 
 .score .icon{
 	align-self: end;
 }
 
-.icon.place{
-	margin: 0;
-	grid-column: span 1 / span 1;
-}
-
 .icon.crown{
 	grid-column: 1 / span 1;
 	width: 7vw;
-	height: 8vw;
+	height: 7vw;
 	fill: yellow;
+}
+
+.icon.place{
+	margin: 0;
+	font-size: 1.2em;
+	grid-column: span 1 / span 1;
 }
 
 .icon.delete{
@@ -54,8 +62,12 @@
 
 #no-content, #no-content.off{
 	color: transparent;
-	place-self: center;
 	display: none;
+	position: absolute;
+	top: 40%;
+	text-align: center;
+	width: 100%;
+	font-size: 1.1em;
 }
 
 #no-content.on{
@@ -71,18 +83,32 @@
 
 .score > .content h3{
 	color: var(--frenchViolet);
-	font-size: 1.3rem;
 	width: 90%;
 	flex: 1 0 auto;
-	margin: 0 0 2%;
+	margin: 5% 0 2%;
+	font-size: .90em;
+}
+
+.score h3:first-of-type{
+	margin-top: 0;
 }
 
 .score > .content span{
-	font-size: 1.2rem;
 	flex: 1 0 auto;
 	width: 90%;
 }
 
-.score h3:not(:first-of-type){
-	margin-top: 10%;
+@media only screen and (orientation: landscape) {
+	#score-content{
+		grid-gap: 2vh;
+	}
+	
+	.score > header > .container{
+		grid-template-columns: 10% 10% 1fr;
+	}
+	
+	.icon.crown, .icon.delete{
+		height: 7vh;
+		width: 7vh;
+	}
 }
