--- a/src/pages/game/styles.css
+++ b/src/pages/game/styles.css
@@ -2,7 +2,7 @@
 	width: 9vw;
 	height: 9vw;
 	stroke-width: 0;
-	fill: var(--lavenderWeb);
+	fill: var(--colorPrimary);
 }
 
 .block-container{
@@ -19,17 +19,16 @@
 
 #side{
 	height: 100%;
-	color: var(--lavenderWeb);
 	flex: 1 0 auto;
 	padding: 1%;
 	width: 10%;
-	background-color: var(--xiketic);
+	background-color: var(--sidebarColor);
 	box-sizing: border-box;
 }
 
 #side h3{
 	margin: 1%;
-	color: var(--malachite);
+	color: var(--colorSecondary);
 }
 
 /*next*/
@@ -51,7 +50,7 @@
 }
 
 #root > footer{
-	background-color: var(--blackCoffee);
+	background-color: var(--footerColor);
 }
 
 #root > footer > .container{
@@ -66,12 +65,12 @@ footer > .container .button{
 	height: auto;
 	width: 100%;
 	place-self: center;
-	stroke: var(--lavenderWeb);
+	stroke: var(--gameButtonColor);
 	border-radius: 50%;
 }
 
 .container .button.spin{
-	fill: var(--lavenderWeb);
+	fill: var(--gameButtonColor);
 }
 
 .container .button:hover{
@@ -111,7 +110,7 @@ footer > .container .button{
 		width: auto;
 		justify-self: end;
 		padding: 1vh;
-		border: 1vh groove var(--lavenderWeb);
+		border: 1vh groove var(--colorPrimary);
 		border-right: none;
 		border-bottom: none;
 	}
