--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,22 @@
 :root{
-	--xiketic: #0D0207;
+	/*--xiketic: #0D0207;
 	--blackCoffee: #383438;
+	*/
 	--malachite: #00DB71;
 	--frenchViolet: #7100D9;
 	--dogwoodRose: #DA0061;
 	--lavenderWeb: #E1DEF9;
 	--smokyBlack: #141314;
+	
+	--fontSize: calc(4 * 100vw / 100);
+	--colorPrimary: #E1DEF9;
+	--colorSecondary: #00DB71;
+	--windowColor: #141314;
+	--headerColor: #0D0207;
+	--buttonColor: #DA0061;
+	--footerColor: #383438;
+	--sidebarColor: #0D0207;
+	--gameButtonColor: #E1DEF9;
 }
 
 html,
@@ -18,7 +29,8 @@ body{
 	overflow: scroll;
 	user-select: none;
 	font-family: 'Roboto Condensed', Sans-Serif;
-	background-color: var(--smokyBlack);
+	color: var(--colorPrimary);
+	background-color: var(--windowColor);
 }
 
 #root{
@@ -27,13 +39,13 @@ body{
 	width: 100%;
 	flex-flow: column;
 	overflow: scroll;
-	font-size: 4vw;
+	font-size: var(--fontSize);
 	box-sizing: border-box;
 }
 
 #root > header{
 	z-index: 90;
-	background-color: var(--xiketic);
+	background-color: var(--headerColor);
 }
 
 header > .container{
